# Robo-MECS_exercise

001_robot_system/015_ros/omni_simulation/docker_env/: Dockerfile
001_robot_system/015_ros/omni_simulation/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.sh
001_robot_system/015_ros/omni_simulation/install/experiments/lib/experiments/: exp1
001_robot_system/015_ros/omni_simulation/install/experiments/share/experiments/: local_setup.sh  package.sh
001_robot_system/015_ros/omni_simulation/install/experiments/share/experiments/launch/: exp1.launch.py
001_robot_system/015_ros/omni_simulation/install/keyboard_joy/lib/keyboard_joy/: joy_node
001_robot_system/015_ros/omni_simulation/install/keyboard_joy/share/keyboard_joy/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
001_robot_system/015_ros/omni_simulation/install/omni_ctl/share/omni_ctl/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
001_robot_system/015_ros/omni_simulation/install/simulation_env/share/simulation_env/: local_setup.dsv  local_setup.sh  package.bash  package.ps1  package.sh  package.zsh
001_robot_system/015_ros/omni_simulation/install/simulation_env/share/simulation_env/config/: orca_controllers.yaml
001_robot_system/015_ros/omni_simulation/install/simulation_env/share/simulation_env/launch/: setup.launch.py
001_robot_system/015_ros/omni_simulation/install/simulation_env/share/simulation_env/model/: orca_02_marker.dae
001_robot_system/015_ros/omni_simulation/install/simulation_env/share/simulation_env/rviz/: view_robot.rviz
001_robot_system/015_ros/omni_simulation/install/simulation_env/share/simulation_env/urdf/: ORCA_urdf.xacro
001_robot_system/015_ros/omni_simulation/log/: latest_build
001_robot_system/015_ros/omni_simulation/simulation_env/: CMakeLists.txt  package.xml
001_robot_system/015_ros/omni_simulation/src/experiments/: CMakeLists.txt
001_robot_system/015_ros/omni_simulation/src/experiments/launch/: cmd_vel_check.launch.py  exp2.launch.py  exp3.launch.py  omni_ctl.launch.py  quat2yaw.launch.py  vel2wheels.launch.py
001_robot_system/015_ros/omni_simulation/src/experiments/src/: cmd_vel_check.cpp  exp1.cpp  exp2.cpp  exp3.cpp  pd_ctl.cpp  quat2yaw.cpp  vel2wheels.cpp
001_robot_system/015_ros/omni_simulation/src/install/: local_setup.sh  setup.sh
001_robot_system/015_ros/omni_simulation/src/log/: latest_build
001_robot_system/015_ros/omni_simulation/src/omni_ctl/: CMakeLists.txt  package.xml
001_robot_system/015_ros/omni_simulation/src/omni_ctl/src/: pd_ctl.cpp
001_robot_system/015_ros/omni_simulation/src/simulation_env/: CMakeLists.txt
001_robot_system/015_ros/omni_simulation/src/simulation_env/launch/: robot_spawner.launch.py  setup.launch.py  view_robot.launch.py
001_robot_system/015_ros/omni_simulation/src/simulation_env/model/: orca_01_marker.dae
001_robot_system/015_ros/omni_simulation/src/simulation_env/src/: robot_executor.cpp
001_robot_system/015_ros/omni_simulation/src/simulation_env/urdf/body/: omni_macro.xacro
001_robot_system/015_ros/omni_simulation/src/simulation_env/urdf/controller/: servo_controller.xacro
001_robot_system/015_ros/omni_simulation/src/simulation_env/urdf/sensor/: camera.xacro
001_robot_system/015_ros/omni_simulation/src/simulation_env/worlds/: rescon.world
001_robot_system/015_ros/omni_simulation/src/simulation_env/worlds/world_config/: world.sdf
004_control/020_feed_back/pole_simulation/: .gitignore  example.py  pole_model.py  result.csv  simulation.py  simulation_env.py
004_control/020_feed_back/position_control/: pole_model.py  simulation.py
(+17 files in other folders)
